--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate to Help People</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <section id="hero_section">
+        <h1>Let’s Help Those Who Are <br>More In Need</h1>
+        <p>One of the biggest reasons donating to others makes us feel good is because of the <br>stress-relieving
+            properties of charity work and altruism.</p>
+        <button type="button" onclick="alert('Thank you!')">Donate Now </button>
+    </section>
 
 </body>
 
