--- a/index.html
+++ b/index.html
@@ -13,13 +13,42 @@
 </head>
 
 <body>
+    <!-- Hero section code start -->
     <section id="hero_section">
         <h1>Let’s Help Those Who Are <br>More In Need</h1>
         <p>One of the biggest reasons donating to others makes us feel good is because of the <br>stress-relieving
             properties of charity work and altruism.</p>
         <button type="button" onclick="alert('Thank you!')">Donate Now </button>
     </section>
-
+    <!-- Hero section code end -->
+    <!-- Donate section code started -->
+    <section id="donate_section">
+        <h2>Donate Today</h2>
+        <p>It is easier to give a cup of rice to relieve hunger than to relieve the <br> and pain of someone
+            unloved.</p>
+        <div class="donation_amount">
+            <div class="amount">
+                <h3>100TK</h3>
+            </div>
+            <div class="amount" id="default_selected_amount">
+                <h3>200TK</h3>
+            </div>
+            <div class="amount">
+                <h3>500TK</h3>
+            </div>
+            <div class="amount">
+                <h3>1000TK</h3>
+            </div>
+            <div class="amount">
+                <h3>5000TK</h3>
+            </div>
+        </div>
+        <div class="other_amount_field">
+            <input type="number" name="" id="" placeholder="Other Amount (Taka)">
+        </div>
+        <button type="button" onclick="alert('Thank you!')">Donate Now </button>
+    </section>
+    <!-- Donate section code end -->
 </body>
 
 </html>
