update donation plan section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,39 @@
         <button type="button" onclick="alert('Thank you!')">Donate Now </button>
     </section>
     <!-- Donate section code end -->
+    <!-- Our Donate Plan Code Started -->
+    <section id="donate_plan">
+        <h2>Our Donate Plan</h2>
+        <p class="donate_plan_sub_texts">If you're in the luckiest one percent of humanity, you owe it to the rest of
+            <br>humanity to think about
+            the
+            other 99 percent.
+        </p>
+        <div id="plans">
+            <div class="donate_plans1">
+                <img src="icons/food.webp" alt="Donate Plan Food Icon">
+                <h3>Food for a Family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit.</p>
+            </div>
+            <div class="donate_plans2">
+                <img src="icons/shelter.webp" alt="Donate Plan Food Icon">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit.</p>
+            </div>
+            <div class="donate_plans3">
+                <img src="icons/Frame-1.webp" alt="Donate Plan Food Icon">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Our Donate Plan Code end -->
 </body>
 
 </html>
