donation brief section update

--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
         </div>
     </section>
     <!-- Our Donate Plan Code end -->
+    <section id="brief_section1">
+        <div class="brief_descriptions">
+            <h2>Their lives depend on your donation</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+        </div>
+        <div class="brief_image">
+            <img src="images/" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
