All sections updated

--- a/index.html
+++ b/index.html
@@ -82,17 +82,54 @@
         </div>
     </section>
     <!-- Our Donate Plan Code end -->
-    <section id="brief_section1">
-        <div class="brief_descriptions">
+    <!-- Images gallery code started -->
+    <section id="gallery_section">
+        <div class="gallery_descriptions">
             <h2>Their lives depend on your donation</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <p>The people are lost their home, they are loveable people and their property. <br>The flood take
+                everything
+                from them.</p>
         </div>
-        <div class="brief_image">
-            <img src="images/" alt="">
+        <div class="image_gallery">
+            <div class="flood_image">
+                <img src="images/donation0.webp">
+            </div>
+            <div class="flood_image">
+                <img src="images/donation1.webp">
+            </div>
+            <div class="flood_image">
+                <img src="images/donation2.webp">
+            </div>
+        </div>
+        <div class="image_gallery2">
+            <div class="flood_image">
+                <img src="images/donation3.webp">
+            </div>
+            <div class="flood_image">
+                <img src="images/donation4.webp">
+            </div>
+            <div class="flood_image">
+                <img src="images/donation5.webp">
+            </div>
         </div>
     </section>
+    <!-- Images gallery code end -->
+    <!-- Get My Updates code started -->
+    <section id="get_my_update">
+        <h2>Get My Updates</h2>
+        <p>Subscribe to get my regular updates about Flood</p>
+        <div class="subscribe_form">
+            <input type="email" name="" id="email" placeholder="Enter Your Email Address">
+            <button type="button" onclick="alert('Thank you!')">Subscribe </button>
+        </div>
+    </section>
+    <!-- Get My Updates code end -->
+    <!-- Footer section code started -->
+    <section id="footer">
+        <h2>Be Humble</h2>
+        <p>I'm gonna do it</p>
+    </section>
+    <!-- Footer section code end -->
 </body>
 
 </html>
