--- a/index.html
+++ b/index.html
@@ -61,23 +61,20 @@
             <div class="donate_plans1">
                 <img src="icons/food.webp" alt="Donate Plan Food Icon">
                 <h3>Food for a Family</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis
-                    enim velit mollit.</p>
+                <p>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking lasts a day.
+                    The thrill of giving lasts a lifetime.</p>
             </div>
             <div class="donate_plans2">
                 <img src="icons/shelter.webp" alt="Donate Plan Food Icon">
                 <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis
-                    enim velit mollit.</p>
+                <p>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking lasts a day.
+                    The thrill of giving lasts a lifetime.</p>
             </div>
             <div class="donate_plans3">
                 <img src="icons/Frame-1.webp" alt="Donate Plan Food Icon">
                 <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis
-                    enim velit mollit.</p>
+                <p>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking lasts a day.
+                    The thrill of giving lasts a lifetime.</p>
             </div>
         </div>
     </section>
